<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreInformationActivity"
    android:layout_marginLeft="5sp"
    android:layout_marginRight="5sp">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="260dp" />

    <!-- 換圖 dots -->
    <com.lwj.widget.viewpagerindicator.ViewPagerIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/viewpager"
        app:default_color="#cdcdcd"
        app:indicatorType="CIRCLE"
        app:length="24dp"
        app:radius="3dp"
        app:selected_color="@color/orange" />

    <TextView
        android:id="@+id/textView_space"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/indicator"
        android:gravity="center"
        android:textColor="@color/title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_basic"
        android:layout_below="@+id/textView_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_background"
        android:text="@string/basic"
        android:textColor="@color/title"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linearlayout_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_basic"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_class_statement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/class_statement"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_weight="4"
            android:text="@string/myclass"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout_class"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_number_statement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/number_statement"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_weight="4"
            android:text="@string/mynumber"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_name"
        android:layout_below="@+id/linearlayout_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_name_statement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_statement"
            android:textSize="12sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/myname"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="15sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_space2"
        android:layout_below="@+id/linearlayout_name"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/textView_sponsor"
        android:layout_below="@+id/textView_space2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_background"
        android:text="@string/sponsor"
        android:textColor="@color/title"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linearlayout_unit"
        android:layout_below="@+id/textView_sponsor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_unit_statement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_statement"
            android:textSize="12sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/unit"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_boss"
        android:layout_below="@+id/linearlayout_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_boss_statement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boss_statement"
            android:textSize="12sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView_boss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/boss"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="15sp"/>
    </LinearLayout>

</RelativeLayout>